# Kalenda

./: .dockerignore  .gitignore  .mocharc.yml  .npmrc  ARCHITECTURE_DIAGRAM.md  Anchor.toml  CHECK_TREASURY_SETUP.txt  COMPLETION_SUMMARY.md  DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DOCUMENTATION_INDEX.md  Dockerfile  FEATURE_CHECKLIST.md  FEATURE_SUMMARY_VI.md  FEATURE_VERIFICATION_REPORT.md  FEE_CONSISTENCY_FIX.md  FIGMA_DESIGN_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_EXAMPLES.ts  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.sh  IMPLEMENTATION_SUMMARY_VI.md  PAYMENT_IMPROVEMENTS.md  PITCH_DECK.md  PITCH_IMPROVEMENTS.md  PROFILE_SYSTEM_VISUAL.md  PROFILE_UPGRADE_COMPLETE.md  PROJECT_AUDIT_REPORT.md  QUICK_START_DEMO_SETUP.md  README-TESTS.md  README.md  SUPER_QUICK_SUMMARY.md  TIPPING_IMPLEMENTATION.md  TRANSACTION_FIX_SUMMARY.txt  UPCOMING_APPOINTMENTS_FEATURE.md  VISUAL_ARCHITECTURE.md  build-override.sh  docker-compose.yml  mocha-multi-reporters.config.js  mocha.config.cjs  (+9 more)
.github/workflows/: ci.yml
apps/actions/: env.d.ts  package.json  tsconfig.json
apps/actions/src/: index.ts
apps/web/: .env.local.example  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
apps/web/.data/: availability.json  creators.json  requests.json  slots.json
apps/web/app/: globals.css  home.module.css  icon.tsx  layout.tsx  (+2 more)
docker-target/: .rustc_info.json
docker-target/deploy/: timemarket-keypair.json
docs/: ISSUES.md
programs/my_program/: Cargo.toml
programs/my_program/src/: lib.rs
programs/timemarket/: Cargo.toml
programs/timemarket/src/: escrow.rs  lib.rs  market.rs  tipping.rs
scripts/: sync-idl.mjs
tests/: auction-safety-fix.test.ts  auction-update-end.test.ts  auto-bid.test.ts  buy-now.test.ts  close-slot.test.ts  commit-store-capacity.test.ts  duplicate-stable-settle.test.ts  fee-override.test.ts  fee-vault-separation.test.ts  multi-capacity.test.ts  nft-minting.test.ts  program-id-consistency.test.ts  refund-queue.test.ts  sdk-build-distribution.test.ts  sdk-client-helpers.test.ts  sdk-idl-import.test.ts  sealed-bid-end-settle.test.ts  security-sanity.test.ts  sol-stable-flow.test.ts  web-core-screens.test.ts  web-slot-details.test.ts
tests/test-helpers/: sdk-import.ts
(+985 files in other folders)
