[package]
name = "my_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
cpi = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"

[patch.crates-io]
anchor-syn = { path = "../../patches/anchor-syn-0.30.1" }
