[package]
name = "timemarket"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "timemarket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "token-2022", "associated-token", "metadata"] }
bytemuck = { version = "1.14", features = ["derive"] }

